src/test/ui/parser/omitted-arg-in-item-fn.stderr
error: expected one of `:` or `@`, found `)`
  --> $DIR/omitted-arg-in-item-fn.rs:1:9
   |
LL | fn foo(x) { //~ ERROR expected one of `:` or `@`, found `)`
   |         ^ expected one of `:` or `@` here

error: aborting due to previous error

